# account-service

./: Dockerfile  pyproject.toml
.github/workflows/: pipeline.yml
account_service/: run.py
account_service/controllers/: mapping.py
account_service/models/: account.py
account_service/servers/: server.py
account_service/services/: account.py  migrator.py
tests/: base_test.py
tests/integration/: test_database.py  test_service.py
tests/unittests/: test_account_model.py  test_mapping.py
